--- a/Styles/architects.css
+++ b/Styles/architects.css
@@ -11,20 +11,40 @@
 .display-flex{
     display: flex;
 }
+.dark1{
+    color: #131313;
+}
 .dark2{
     color: #424242;
 }
 .dark3{
     color: #727272;
 }
+.orange{
+    color: #FF900E;
+}
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+    background-color: #FF900E;
+    font-weight: 600px;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 8px;
 }
 /* Header styles */
 
 /* Navbar related styles */
 .navbar{
     justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight: 700px;
+    font-size: 3rem;
 }
 .nav-items{
     list-style: none;
@@ -38,4 +58,42 @@
 .navbar, .banner{
     max-width: 1440px;
     margin: 0px auto;
+}
+/* Banner Styles */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700px;
+    font-size:  4rem;
+}
+.banner-image{
+    width: 100%;
+}
+/* teams section */
+.teams{
+    max-width: 1440px;
+    margin: 80px auto;
+    align-items: center;
+}
+.image-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 80px;
+    gap: 24px;
+}
+.feature-title{
+    font-size: 2.8rem;
+}
+/* Media responsive query */
+@media screen and (max-with: 567px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
 }
