--- a/Styles/architects.css
+++ b/Styles/architects.css
@@ -91,9 +91,45 @@
 .feature-title{
     font-size: 2.8rem;
 }
+/* Fact section */
+.fact-section{
+    max-width: 850px;
+    margin-left: 240px;
+}
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 240px;
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    justify-content: center;
+    align-items: center;
+}
 /* Media responsive query */
-@media screen and (max-with: 567px) {
-    .navbar, .nav-links{
+@media screen and (max-width: 567px) {
+    .navbar, 
+    .nav-links, 
+    .teams
+    {
         flex-direction: column;
+    }
+    .image-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin: 20px;
+    }
+}
+/* Medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px;
     }
 }
